# UbundiForge

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CLIToolsHelp.txt  CONTRIBUTING.md  README.md  forge  pyproject.toml
.github/workflows/: ci.yml  release-homebrew.yml
Formula/: ubundiforge.rb
agent_docs/: adding_a_stack.md  architecture.md
assets/terminal banner/: ubundiBanner copy 2.sh  ubundiBanner copy.sh  ubundiBanner.py  ubundi_block_bw_deep_shadow.html
conventions/global/: cross-recipe-docker.md  cross-recipe-python.md  cross-recipe-typescript.md  frontend-brand.md  frontend-communication.md  git.md  metadata.yaml  project-files.md  python-architecture.md  python-standards.md  shared.md  typescript-standards.md
conventions/manifests/: browse-labels.yaml  bundles.yaml
docs/: ForgeProjectSpec.md  ForgeRepoResearchPrompt.md  README.md  ROADMAP.md  admin-playbook.md  claude-md-template.md  configuration.md  getting-started.md  homebrew.md  stacks.md  troubleshooting.md
docs/Prompt/: gemini 1.txt
docs/diagrams/: forge-flow.md  forge-input-flow.md  forge-prompt-assembly.md  forge-routing-and-execution.md  forge-runtime-pipeline.md
docs/guides/: configuration.md  getting-started.md  stacks.md  troubleshooting.md
docs/internal/: README.md  forge-project-spec.md  forge-repo-research-prompt.md
docs/maintainers/: adding-a-stack.md  admin-playbook.md  homebrew-release.md  roadmap.md
docs/reference/: README.md  cli-tools-help.txt
forge/: __init__.py  cli.py  conventions.py  prompt_builder.py  prompts.py  router.py  runner.py  stacks.py
research/archive/: back-end.md  folder-structure.md  front-end.md  git.md
research/forge-discovery/: conventions-forge-should-learn.md  forge-recommendations.md  gaps-and-open-questions.md  libraries-and-patterns.md  portfolio-inventory.md  scaffold-recipes.md  stacks.yaml
scripts/: generate_homebrew_formula.py  install.sh
skills/forge-scaffold/: CHANGELOG.md  README.md  SKILL.md
src/ubundiforge/: __init__.py  __main__.py  agent_quality.py  analytics.py  card.py  checks.py  cli.py  config.py  convention_admin.py  convention_compiler.py  convention_history.py  convention_models.py  convention_registry.py  conventions.py  dashboard.py  evolutions.py  homebrew.py  logo.py  media_assets.py  orchestrator.py  preferences.py  prompt_builder.py  prompts.py  ui.py  (+10 more)
tests/: test_adapter_base.py  test_agent_quality.py  test_analytics.py  test_card.py  test_checks.py  test_claude_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_convention_admin.py  test_convention_compiler.py  test_convention_registry.py  test_conventions.py  test_dashboard.py  test_design_templates.py  test_evolutions.py  test_gemini_adapter.py  test_homebrew.py  test_json_parsing.py  test_logo.py  test_media_assets.py  test_orchestrator.py  test_orchestrator_ui.py  test_preferences.py  test_prompt_builder.py  test_prompts.py  test_protocol.py  test_quality.py  test_router.py  test_runner.py  test_safety.py  test_scaffold_log.py  test_scaffold_options.py  test_snapshots.py  test_sound.py  test_subprocess_utils.py  test_ui.py  test_verify.py
ubundiforge/: __init__.py  __main__.py  cli.py  conventions.py  design_templates.py  forge_entry.py  logo.py  media_assets.py  prompt_builder.py  prompts.py  router.py  runner.py  safety.py  scaffold_options.py  setup.py  stacks.py  ui.py  verify.py
(+38 files in other folders)
