[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ubundiforge"
version = "0.1.0"
description = "A CLI wrapper that scaffolds new projects using AI coding tools with your conventions baked in."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "questionary>=2.1.0",
]

[project.scripts]
forge = "ubundiforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ubundiforge"]

[tool.hatch.build.targets.wheel.force-include]
"assets/ascii-art.txt" = "assets/ascii-art.txt"

[tool.hatch.build.targets.sdist]
include = [
    "assets/ascii-art.txt",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
