[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ubundiforge"
version = "0.2.0"
description = "A CLI wrapper that scaffolds new projects using AI coding tools with your conventions baked in."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ai", "cli", "scaffolding", "developer-tools", "ubundi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "questionary>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/matthewubundi/UbundiForge"
Repository = "https://github.com/matthewubundi/UbundiForge"
Issues = "https://github.com/matthewubundi/UbundiForge/issues"

[project.scripts]
forge = "ubundiforge.__main__:main"

[project.entry-points."pipx.run"]
ubundiforge = "ubundiforge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ubundiforge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/ubundiforge",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
